--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -18,7 +18,9 @@
     <link rel="stylesheet" th:href="@{/css/chart.css}">
 
     <input type="hidden" id="balancesChar" th:value="${dashboard.balancesChar}"/>
-    <input type="hidden" id="categoriesChar" th:value="${dashboard.categoriesChar}"/>
+    <input type="hidden" id="categoryChar" th:value="${dashboard.categoriesChar}"/>
+    <input type="hidden" id="incomes" th:value="${dashboard.incomesSummary}"/>
+    <input type="hidden" id="expenses" th:value="${dashboard.expensesSummary}"/>
 </head>
 
 <body>
@@ -36,20 +38,37 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="col">
-                            <canvas id="balanceChart" class="chart"></canvas>
+                            <canvas id="incomeChart" class="chart"></canvas>
                         </div>
                         <div class="col">
-                            <canvas id="expensesChart" class="chart"></canvas>
+                            <canvas id="expenseChart" class="chart"></canvas>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            <canvas id="balanceChart" class="chart"></canvas>
+                        </div>
+                        <div class="col">
+                            <canvas id="categoriesChart" class="chart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </div>
 </div>
 
+<script th:src="@{/js/functions.js}"></script>
 <script th:src="@{/js/char-dashboard.js}"></script>
-<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"> </div>
+<script th:src="@{/js/char-incomes.js}"></script>
+<script th:src="@{/js/char-expenses.js}"></script>
+<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 
 </body>
 
