--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -3,113 +3,119 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Expenses</title>
-  <link rel="icon" type="image/x-icon" th:href="@{/img/icons/logo.png}">
+    <title>Expenses</title>
+    <link rel="icon" type="image/x-icon" th:href="@{/img/icons/logo.png}">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css}"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css}"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!--Chart.js -->
-  <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
-  <link rel="stylesheet" th:href="@{/css/chart.css}">
-  <input type="hidden" id="summary" th:value="${summary.summary}"/>
+    <!--Chart.js -->
+    <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/chart.css}">
+    <input type="hidden" id="expenses" th:value="${summary.summary}"/>
 </head>
 
 <body>
-  <nav th:replace="fragments/navbar.html :: navbar(module='expenses')"></nav>
+<nav th:replace="fragments/navbar.html :: navbar(module='expenses')"></nav>
 
-  <div class="container-fluid">
+<div class="container-fluid">
     <div class="row">
-      <nav th:replace="fragments/sidebar.html :: sidebar(module='expenses')"></nav>
+        <nav th:replace="fragments/sidebar.html :: sidebar(module='expenses')"></nav>
 
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-        <br>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">
-              <form action="#" th:action="@{/expenses/create}" method="post" th:object="${transaction}">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-sm">
-                      <div class="form-group">
-                        <label for="category">Select Category</label>
-                        <select class="form-control" th:field="*{categoryId}">
-                          <option th:each="category : ${summary.categories}" th:value="${category.id}" th:text="${category.name}"
-                                  id="category" name="category" ></option>
-                        </select>
-                      </div>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <br>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <form action="#" th:action="@{/expenses/create}" method="post" th:object="${transaction}">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="category">Select Category</label>
+                                            <select class="form-control" th:field="*{categoryId}">
+                                                <option th:each="category : ${summary.categories}"
+                                                        th:value="${category.id}" th:text="${category.name}"
+                                                        id="category" name="category"></option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="date">Date</label>
+                                            <input type="date" class="form-control" id="date" max="" value="" required
+                                                   th:field="*{date}">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="amount">Amount</label>
+                                            <input type="number" class="form-control" id="amount" min="0.01" step="0.01"
+                                                   value="1.00"
+                                                   placeholder="0.01" required th:field="*{amount}">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <label for="description">Description</label>
+                                            <textarea class="form-control" id="description" rows="1"
+                                                      th:field="*{description}"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-secondary" id="button">Add Expense
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="col-sm">
-                      <div class="form-group">
-                        <label for="date">Date</label>
-                        <input type="date" class="form-control" id="date" max="" value="" required th:field="*{date}">
-                      </div>
+
+                    <div class="col">
+                        <canvas id="expenseChart" class="chart"></canvas>
                     </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm">
-                      <div class="form-group">
-                        <label for="amount">Amount</label>
-                        <input type="number" class="form-control" id="amount" min="0.01" step="0.01" value="1.00"
-                               placeholder="0.01" required th:field="*{amount}">
-                      </div>
-                    </div>
-                    <div class="col-sm">
-                      <div class="form-group">
-                        <label for="description">Description</label>
-                        <textarea class="form-control" id="description" rows="1" th:field="*{description}"></textarea>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-sm">
-                      <div class="form-group">
-                        <button type="submit" class="btn btn-secondary" id="button">Add Expense</button>
-                      </div>
-                    </div>
-                  </div>
                 </div>
-              </form>
             </div>
 
-            <div class="col">
-              <canvas id="expenseChart" class="chart"></canvas>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm text-center">
+                    <thead>
+                    <tr>
+                        <th>Category</th>
+                        <th>Date</th>
+                        <th>Amount</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="transaction : ${summary.transactions}">
+                        <td th:text="${transaction.category}"></td>
+                        <td th:text="${transaction.date}"></td>
+                        <td th:text="${transaction.amount}"></td>
+                        <td th:text="${transaction.description}"></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-          </div>
-        </div>
-
-        <div class="table-responsive">
-          <table class="table table-striped table-sm text-center">
-            <thead>
-            <tr>
-              <th>Category</th>
-              <th>Date</th>
-              <th>Amount</th>
-              <th>Description</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="transaction : ${summary.transactions}">
-              <td th:text="${transaction.category}"></td>
-              <td th:text="${transaction.date}"></td>
-              <td th:text="${transaction.amount}"></td>
-              <td th:text="${transaction.description}"></td>
-            </tr>
-            </tbody>
-          </table>
-        </div>
-      </main>
+        </main>
     </div>
-  </div>
+</div>
 
+<script th:src="@{/js/functions.js}"></script>
 <script th:src="@{/js/char-expenses.js}"></script>
 <script th:src="@{/js/form-validator.js}"></script>
-  <div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"> </div>
+<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 
 </body>
 
