--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -17,10 +17,11 @@
     <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chart.css}">
 
-    <input type="hidden" id="balancesChar" th:value="${dashboard.balancesChar}"/>
-    <input type="hidden" id="categoryChar" th:value="${dashboard.categoriesChar}"/>
-    <input type="hidden" id="incomes" th:value="${dashboard.incomesSummary}"/>
-    <input type="hidden" id="expenses" th:value="${dashboard.expensesSummary}"/>
+    <input type="hidden" id="balancesChart" th:value="${dashboard.balancesChart}"/>
+    <input type="hidden" id="expenseCategoriesChartId" th:value="${dashboard.expenseCategoriesChart}"/>
+    <input type="hidden" id="incomeCategoriesChartId" th:value="${dashboard.incomeCategoriesChart}"/>
+    <input type="hidden" id="incomes" th:value="${dashboard.incomesChart}"/>
+    <input type="hidden" id="expenses" th:value="${dashboard.expensesChart}"/>
 </head>
 
 <body>
@@ -33,6 +34,19 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
 
             <div th:replace="fragments/info-cards.html :: info-cards(module='dashboard')"></div>
+
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            <canvas id="incomeExpenseChart" class="chart"></canvas>
+                        </div>
+                        <div class="col">
+                            <canvas id="balanceChart" class="chart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <div class="container text-center">
@@ -51,10 +65,10 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="col">
-                            <canvas id="balanceChart" class="chart"></canvas>
+                            <canvas id="incomeCategoriesChart" class="chart"></canvas>
                         </div>
                         <div class="col">
-                            <canvas id="categoriesChart" class="chart"></canvas>
+                            <canvas id="expenseCategoriesChart" class="chart"></canvas>
                         </div>
                     </div>
                 </div>
@@ -65,9 +79,12 @@
 </div>
 
 <script th:src="@{/js/functions.js}"></script>
-<script th:src="@{/js/char-dashboard.js}"></script>
-<script th:src="@{/js/char-incomes.js}"></script>
-<script th:src="@{/js/char-expenses.js}"></script>
+<script th:src="@{/js/chart-income-categories.js}"></script>
+<script th:src="@{/js/chart-expense-categories.js}"></script>
+<script th:src="@{/js/chart-balance.js}"></script>
+<script th:src="@{/js/chart-incomes-expenses.js}"></script>
+<script th:src="@{/js/chart-incomes.js}"></script>
+<script th:src="@{/js/chart-expenses.js}"></script>
 <div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 
 </body>
