--- a/src/main/resources/templates/incomes.html
+++ b/src/main/resources/templates/incomes.html
@@ -16,7 +16,7 @@
     <!--Chart.js -->
     <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chart.css}">
-    <input type="hidden" id="incomes" th:value="${summary.summary}"/>
+    <input type="hidden" id="incomes" th:value="${summary.transactionChart}"/>
 </head>
 
 <body>
@@ -112,7 +112,7 @@
 </div>
 
 <script th:src="@{/js/functions.js}"></script>
-<script th:src="@{/js/char-incomes.js}"></script>
+<script th:src="@{/js/chart-incomes.js}"></script>
 <script th:src="@{/js/form-validator.js}"></script>
 
 <div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
