--- a/src/main/resources/templates/fragments/modal-delete.html
+++ b/src/main/resources/templates/fragments/modal-delete.html
@@ -6,40 +6,65 @@
 <div class="modal fade" th:id="'modalDelete-' + ${transaction.id}" tabindex="-1" role="dialog" aria-hidden="true"
      th:fragment="modal-delete(transaction)">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Delete this transaction?</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+        <form th:action="@{/incomes/delete(transactionId=${transaction.id})}" method="post" th:object="${transaction}">
+            <input type="hidden" name="id" id="id" th:value="${transaction.id}"/>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to
+                        delete this transaction?</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <label for="category">Category</label>
+                                    <select class="form-control" th:field="${transaction.categoryId}" id="category"
+                                            disabled>
+                                        <option th:each="category : ${summary.categories}"
+                                                th:value="${category.id}"
+                                                th:text="${category.name}"
+                                                th:selected="${category.id == transaction.categoryId}">
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <label for="date">Date</label>
+                                    <input type="date" class="form-control" id="date" max=""
+                                           th:field="${transaction.date}" disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <label for="amount">Amount</label>
+                                    <input type="number" class="form-control" id="amount" min="0.01" step="0.01"
+                                           placeholder="0.01" th:field="${transaction.amount}" disabled>
+
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <label for="description">Description</label>
+                                    <textarea class="form-control" id="description" rows="1"
+                                              th:field="${transaction.description}" disabled></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" name="submit" class="btn btn btn-danger">Delete</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <table class="table text-center">
-                    <thead>
-                    <tr>
-                        <th>Category</th>
-                        <th>Date</th>
-                        <th>Amount</th>
-                        <th>Description</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td th:text="${transaction.category}"></td>
-                        <td th:text="${transaction.date}"></td>
-                        <td th:text="${transaction.amount}"></td>
-                        <td th:text="${transaction.description}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <form method="post" th:action="@{/incomes/delete(transactionId=${transaction.id})}">
-                    <button type="submit" class="btn btn-danger">Delete</button>
-                </form>
-            </div>
-        </div>
+        </form>
     </div>
 </div>
 
