--- a/src/main/resources/templates/incomes.html
+++ b/src/main/resources/templates/incomes.html
@@ -106,21 +106,32 @@
                         <td th:text="${transaction.amount}"></td>
                         <td th:text="${transaction.description}"></td>
                         <td>
-                            <a data-toggle="modal" th:href="'#modalDelete-' + ${transaction.id}">
-                                <img th:src="@{/img/icons/delete.png}" width="30" height="30"
-                                     class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
-                                     title="Delete">
-                            </a>
-                            <div th:replace="fragments/modal-delete.html :: modal-delete(transaction=${transaction})"></div>
-                        </td>
-
-                        <td>
-                            <a data-toggle="modal" th:href="'#modalUpdate-' + ${transaction.id}">
+                            <a href="javascript:void(0);" data-toggle="modal"
+                               th:data-id="${transaction.id}"
+                               th:data-category-id="${transaction.categoryId}"
+                               th:data-date="${transaction.date}"
+                               th:data-amount="${transaction.amount}"
+                               th:data-description="${transaction.description}"
+                               th:attr="data-target=${'#modalUpdate-' + transaction.id}">
                                 <img th:src="@{/img/icons/update.png}" width="30" height="30"
                                      class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
                                      title="Update">
                             </a>
                             <div th:replace="fragments/modal-update.html :: modal-update(transaction=${transaction})"></div>
+                        </td>
+                        <td>
+                            <a href="javascript:void(0);" data-toggle="modal"
+                               th:data-id="${transaction.id}"
+                               th:data-category-id="${transaction.categoryId}"
+                               th:data-date="${transaction.date}"
+                               th:data-amount="${transaction.amount}"
+                               th:data-description="${transaction.description}"
+                               th:attr="data-target=${'#modalDelete-' + transaction.id}">
+                                <img th:src="@{/img/icons/delete.png}" width="30" height="30"
+                                     class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
+                                     title="Delete">
+                            </a>
+                            <div th:replace="fragments/modal-delete.html :: modal-delete(transaction=${transaction})"></div>
                         </td>
                     </tr>
                     </tbody>
@@ -131,11 +142,13 @@
 </div>
 
 
+<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
+
+<script th:src="@{/js/modal.js}"></script>
 <script th:src="@{/js/functions.js}"></script>
 <script th:src="@{/js/chart-incomes.js}"></script>
 <script th:src="@{/js/form-validator.js}"></script>
 
-<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 </body>
 
 </html>
