--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -89,13 +89,15 @@
             </div>
 
             <div class="table-responsive">
-                <table class="table table-striped table-sm text-center">
+                <table class="table table-hover table-sm text-center">
                     <thead>
                     <tr>
                         <th>Category</th>
                         <th>Date</th>
                         <th>Amount</th>
                         <th>Description</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -104,6 +106,34 @@
                         <td th:text="${transaction.date}"></td>
                         <td th:text="${transaction.amount}"></td>
                         <td th:text="${transaction.description}"></td>
+                        <td>
+                            <a href="javascript:void(0);" data-toggle="modal"
+                               th:data-transaction-id="${transaction.transactionId}"
+                               th:data-category-id="${transaction.categoryId}"
+                               th:data-date="${transaction.date}"
+                               th:data-amount="${transaction.amount}"
+                               th:data-description="${transaction.description}"
+                               th:attr="data-target=${'#modalUpdate-' + transaction.transactionId}">
+                                <img th:src="@{/img/icons/pencil.svg}" width="20" height="20"
+                                     class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
+                                     title="Update">
+                            </a>
+                            <div th:replace="fragments/modal-update.html :: modal-update(transaction=${transaction})"></div>
+                        </td>
+                        <td>
+                            <a href="javascript:void(0);" data-toggle="modal"
+                               th:data-transaction-id="${transaction.transactionId}"
+                               th:data-category-id="${transaction.categoryId}"
+                               th:data-date="${transaction.date}"
+                               th:data-amount="${transaction.amount}"
+                               th:data-description="${transaction.description}"
+                               th:attr="data-target=${'#modalDelete-' + transaction.transactionId}">
+                                <img th:src="@{/img/icons/trash.svg}" width="20" height="20"
+                                     class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
+                                     title="Delete">
+                            </a>
+                            <div th:replace="fragments/modal-delete.html :: modal-delete(transaction=${transaction})"></div>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -112,10 +142,11 @@
     </div>
 </div>
 
+<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 <script th:src="@{/js/functions.js}"></script>
 <script th:src="@{/js/chart-expenses.js}"></script>
 <script th:src="@{/js/form-validator.js}"></script>
-<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
+<script th:src="@{/js/modal.js}"></script>
 
 </body>
 
