--- a/src/main/resources/templates/incomes.html
+++ b/src/main/resources/templates/incomes.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="table-responsive">
-                <table class="table table-striped table-sm text-center">
+                <table class="table table-hover table-sm text-center">
                     <thead>
                     <tr>
                         <th>Category</th>
@@ -107,12 +107,12 @@
                         <td th:text="${transaction.description}"></td>
                         <td>
                             <a href="javascript:void(0);" data-toggle="modal"
-                               th:data-id="${transaction.id}"
+                               th:data-transaction-id="${transaction.transactionId}"
                                th:data-category-id="${transaction.categoryId}"
                                th:data-date="${transaction.date}"
                                th:data-amount="${transaction.amount}"
                                th:data-description="${transaction.description}"
-                               th:attr="data-target=${'#modalUpdate-' + transaction.id}">
+                               th:attr="data-target=${'#modalUpdate-' + transaction.transactionId}">
                                 <img th:src="@{/img/icons/pencil.svg}" width="20" height="20"
                                      class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
                                      title="Update">
@@ -121,16 +121,16 @@
                         </td>
                         <td>
                             <a href="javascript:void(0);" data-toggle="modal"
-                               th:data-id="${transaction.id}"
+                               th:data-transaction-id="${transaction.transactionId}"
                                th:data-category-id="${transaction.categoryId}"
                                th:data-date="${transaction.date}"
                                th:data-amount="${transaction.amount}"
                                th:data-description="${transaction.description}"
-                               th:attr="data-target=${'#modalDelete-' + transaction.id}">
+                               th:attr="data-target=${'#modalDelete-' + transaction.transactionId}">
                                 <img th:src="@{/img/icons/trash.svg}" width="20" height="20"
                                      class="d-inline-block align-top" alt="" data-toggle="tooltip" data-placement="top"
                                      title="Delete">
-                                </a>
+                            </a>
                             <div th:replace="fragments/modal-delete.html :: modal-delete(transaction=${transaction})"></div>
                         </td>
                     </tr>
