--- a/src/main/resources/templates/incomes.html
+++ b/src/main/resources/templates/incomes.html
@@ -102,7 +102,7 @@
                     <tbody>
                     <tr th:each="transaction : ${summary.transactions}">
                         <td th:text="${transaction.category}"></td>
-                        <td th:text="${transaction.date}"></td>
+                        <td th:text="${#temporals.format(transaction.date, 'MM/dd/yyyy')}"></td>
                         <td th:text="${transaction.amount}"></td>
                         <td th:text="${transaction.description}"></td>
                         <td>
