--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -50,7 +50,7 @@
                                  class="d-inline-block align-top" alt=""/>
                         </td>
                         <td th:text="${transaction.category}"></td>
-                        <td th:text="${transaction.date}"></td>
+                        <td th:text="${#temporals.format(transaction.date, 'MM/dd/yyyy')}"></td>
                         <td th:text="${transaction.amount}"></td>
                         <td th:text="${transaction.description}"></td>
                     </tr>
