filter buttons fixed

--- a/src/main/resources/templates/fragments/info-cards.html
+++ b/src/main/resources/templates/fragments/info-cards.html
@@ -50,8 +50,9 @@
         <form th:action="@{'/' + ${module}}" method="get">
           <div class="btn-group-vertical" role="group">
             <input type="submit" name="timeDuration" class="btn btn-secondary"
-                   th:each="timeDuration : ${dashboard.timeDurations}" th:value="${timeDuration.stringValue}"
-                   th:checked="${timeDuration.stringValue} eq ${dashboard.active.stringValue}">
+                   th:each="timeDuration : ${dashboard.timeDurations}"
+                   th:value="${timeDuration.stringValue}"
+                   th:classappend="${timeDuration.stringValue == dashboard.active.stringValue ? 'active' : ''}">
           </div>
         </form>
       </div>
