--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-      <nav class="col-md-2 d-none d-md-block navbar-dark bg-dark sidebar" th:fragment="sidebar(module)">
+      <nav class="sidebar col-md-2 d-none d-md-block navbar-dark bg-dark" th:fragment="sidebar(module)">
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
             <li class="nav-item">
