--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css}"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" th:href="@{/css/global.css}">
+
     <!--Chart.js -->
     <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chart.css}">
@@ -23,8 +25,8 @@
 <body>
 <nav th:replace="fragments/navbar.html :: navbar(module='expenses')"></nav>
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid h-100">
+    <div class="row h-100">
         <nav th:replace="fragments/sidebar.html :: sidebar(module='expenses')"></nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
