--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css}"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" th:href="@{/css/transactions.css}">
+    <link rel="stylesheet" th:href="@{/css/global.css}">
 </head>
 
 <body>
 <nav th:replace="fragments/navbar.html :: navbar(module='transactions')"></nav>
 
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid h-100">
+    <div class="row h-100">
         <nav th:replace="fragments/sidebar.html :: sidebar(module='transactions')"></nav>
 
         <main role="main" class="col-md-10 ml-sm-auto col-lg-10 px-4">
@@ -58,6 +58,7 @@
                 </table>
             </div>
         </main>
+    </div>
     </div>
 </div>
 
