--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -26,14 +26,14 @@
 
 <body>
 
-<nav th:replace="fragments/navbar.html :: navbar(module='dashboard')"></nav>
+<nav th:replace="~{fragments/navbar.html :: navbar(module='dashboard')}"></nav>
 <div class="container-fluid">
     <div class="row">
-        <nav th:replace="fragments/sidebar.html :: sidebar(module='dashboard')"></nav>
+        <nav th:replace="~{fragments/sidebar.html :: sidebar(module='dashboard')}"></nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
 
-            <div th:replace="fragments/info-cards.html :: info-cards(module='dashboard')"></div>
+            <div th:replace="~{fragments/info-cards.html :: info-cards(module='dashboard')}"></div>
 
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <div class="container text-center">
@@ -78,6 +78,8 @@
     </div>
 </div>
 
+<div th:insert="~{fragments/bootstrap-scripts.html :: bootstrap-scripts}"></div>
+
 <script th:src="@{/js/functions.js}"></script>
 <script th:src="@{/js/chart-income-categories.js}"></script>
 <script th:src="@{/js/chart-expense-categories.js}"></script>
@@ -85,7 +87,6 @@
 <script th:src="@{/js/chart-incomes-expenses.js}"></script>
 <script th:src="@{/js/chart-incomes.js}"></script>
 <script th:src="@{/js/chart-expenses.js}"></script>
-<div th:insert="fragments/bootstrap-scripts.html :: bootstrap-scripts"></div>
 
 </body>
 
