--- a/src/main/resources/templates/fragments/modal-delete.html
+++ b/src/main/resources/templates/fragments/modal-delete.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <div class="modal fade" th:id="'modalDelete-' + ${transaction.transactionId}" tabindex="-1" role="dialog"
      aria-hidden="true"
