--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- Required meta tags -->
@@ -19,10 +18,11 @@
     <!--Chart.js -->
     <script th:src="@{https://cdn.jsdelivr.net/npm/chart.js}"></script>
     <link rel="stylesheet" th:href="@{/css/chart.css}">
-    <input type="hidden" id="expenses" th:value="${summary.transactionChart}"/>
 </head>
 
 <body>
+<input type="hidden" id="expenses" th:value="${summary.transactionChart}"/>
+
 <nav th:replace="~{fragments/navbar.html :: navbar(module='expenses')}"></nav>
 
 <div class="container-fluid h-100">
