--- a/src/main/resources/templates/fragments/modal-update.html
+++ b/src/main/resources/templates/fragments/modal-update.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-
-<!-- Modal -->
-<div class="modal fade" th:id="'modalUpdate-' + ${transaction.transactionId}" tabindex="-1" role="dialog" aria-hidden="true"
+<div class="modal fade" th:id="'modalUpdate-' + ${transaction.transactionId}" tabindex="-1" role="dialog"
+     aria-hidden="true"
      th:fragment="modal-update(transaction)">
     <div class="modal-dialog" role="document">
         <form th:action="@{'/' + ${transaction.type} + 's/update'}" method="post" th:object="${transaction}">
